# ComputerSystemLabs

./: CMakeLists.txt  README.md
lab1/: basicinfo.c  datatype.c  floattest.c  header.h  hellolinux.c  hellowin.c  main.c  showbyte.c  sumtest.c
lab2/: 2_2-hellolinux.c  3_1-arch32.c  3_1-arch64.c  3_1-size.c  3_2-xyz.c  3_3-arg_main.c  3_4-str.c  4_1-utf8len.c  5_1-atoi.c  5_2-atof.c  5_3-itoa.c  5_4-ftoa.c  6_1-fib_dg.c  6_2-fib_loop.c  6_4-zero.c  7_2-float11.c  7_3-floatx.c  7_4-float0.c  arch.c  arch.h  hellolinux.c  hellolinux.h  main.c  memroy.c  memroy.h  xtoy.c  xtoy.h
lab3/: README  ans.txt  bomb
lab4/bufbomb_32_O0_EBP/ans/: bang_1190200703.txt  boom_1190200703.txt  fizz_1190200703.txt  nitro_1190200703.txt  smoke_1190200703.txt
lab4/bufbomb_32_O0_EBP/inject_code/: Makefile  bang_inject.s  boom_inject.s  nitro_inject.s
lab4/bufbomb_64_O0_EBP/: smoke_1190200703.txt
lab5/: .gitignore  Makefile
lab5/inject/: inject2.s
lab6/: .gitignore  csim.c  trans.c
lab7/: Makefile  tsh.c
lab8/: Makefile  mm.c  mm.h
